# Tamago-server

./: README.md  setup.cfg  setup.py
src/: __init__.py  db.py  mascota.py  schema.sql
src/static/: style.css
src/templates/: index.html
