[metadata]
name = Tamago-server
version = 1.0.0
url = https://github.com/T0kiii/Tamago-server
license = GPL-3.0 license 
maintainer = T0kiii
maintainer_email = tokicross05@gmail.com
description = Aplicación servidor que registra los cambios sobre una mascota virtual.
long_description = file: README.md
# long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    wheel
    build
    Flask
    python-dotenv

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr